# Apple-Mail-MCP-

./: PROTOTYPE_SERVER_REQUEST_REQUIREMENTS.md  README.md  pyproject.toml
src/apple_mail_bridge/: __init__.py  api_contract.py  applescript.py  cli.py  recipient_index.py  recipient_resolver.py  scripts.py  service.py
tests/: test_service_read_latest_from.py
